--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ final_project/*.class
 
 # Ignore JAR files
 final_project/*.jar
+
+# Ignore configuration files
+final_project/src/main/resources/application.properties
